--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dhruva's Portfolio</title>
+    <title>Vedh's Portfolio</title>
 </head>
 <body>
     <h1>This is my Portfolio</h1>
